--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aniket gupta</title>
   </head>
-  <body>
+  <body class="bg-white duration-300 text-slate-800
+  dark:bg-slate-800 dark:text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 
