--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aniket gupta</title>
+    <link rel="shortcut icon" href="./public/favicon.png" type="image/x-icon">    
+    <title>Desh Videsh - All Countries Details</title>
   </head>
-  <body class="bg-white duration-300 text-slate-800
+  <body class="bg-white text-slate-800
   dark:bg-slate-800 dark:text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
